edition = "2024";

package aks.flex.components.services.actions;

option go_package = "github.com/Azure/AKSFlexNode/components/services/actions";

import "google/protobuf/any.proto";

message ApplyActionRequest {
  google.protobuf.Any item = 1;
}

message ApplyActionResponse {
  google.protobuf.Any item = 1;
}

service ActionsService {
  rpc ApplyAction(ApplyActionRequest) returns (ApplyActionResponse) {};
}